2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: <signal.h> is not needed.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Define AUDIT_NO_ID to (unsigned int) -1. This
	value should be used when the ID should not be considered.
	* lib/prototypes.h: Fix the prototype of do_rlogin() according to
	earlier changes.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/shadow.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spwd.sp_flag.
	* lib/shadow.c: Add brackets.
	* lib/shadow.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/shadow.c: The size argument of fgets is an int, not a
	size_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: len should be typed ssize_t as it is the return
	of read(), and is compared to 0. Cast to size_t when necessary.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_ids.c: Use getdef_ulong to retrieve UIDs/GIDs
	from login.defs. Type constants to long integers.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: Use a bool when possible instead of int integers.
	* lib/gshadow.c: Remove __setsgNIS() -never used).
	* lib/gshadow.c: Avoid multi-statements lines.
	* lib/gshadow.c: Avoid assignments in comparisons.
	* lib/gshadow.c: ptr[nelem] is a string. Initialize it to NULL
	instead of '\0'.
	* lib/gshadow.c: Add brackets and parenthesis.
	* lib/gshadow.c: The size argument of strncpy is a size_t and the
	size argument of fgets is an int.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Add brackets.
	* lib/groupio.c: Make sure malloc receives a size_t.
	* lib/groupio.c: Avoid multi-statements lines.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetspent.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spwd.sp_flag.
